--- a/BE/package.json
+++ b/BE/package.json
@@ -20,6 +20,8 @@
     "multer": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^30.1.2",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
